# Vulkan_Sandbox

./: !  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
shaders/: triangle.frag  triangle.vert
shaders/model/: model.frag  model.vert
src/: Application.cpp  Application.h  Camera.hpp  Material.hpp  Model.cpp  Model.hpp  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
